# 3-Uzduotis

./: Antraste.h  CMakeLists.txt  Failas.cpp  Failas.h  README.md  Source.cpp  Studentas.cpp  Studentas.h  Uzklausos.cpp  Uzklausos.h  V1.1.sln  V1.1.vcxproj  V1.2.sln  V1.2.vcxproj  V1.5.sln  V1.5.vcxproj  V3.0.02.sln  V3.0.02.vcxproj
Setup.V3.0.02/: Setup.V3.0.02.vdproj
Setup.V3.0.02/Release/: Setup.V3.0.02.msi
