cmake_minimum_required(VERSION 3.20)

project("V1.1")

add_executable( "${PROJECT_NAME}" "C:/Users/ugneo/c++ failai/V1.1/V1.1/Failas.cpp" "C:/Users/ugneo/c++ failai/V1.1/V1.1/Patikrinimas.cpp" "C:/Users/ugneo/c++ failai/V1.1/V1.1/Source.cpp" "C:/Users/ugneo/c++ failai/V1.1/V1.1/Studentas.cpp" "C:/Users/ugneo/c++ failai/V1.1/V1.1/Uzklausos.cpp")