cmake_minimum_required(VERSION 3.20)

project("V1.0_bandymas_nr2")

add_executable("${PROJECT_NAME}" "C:/Users/ugneo/c++ failai/V1.2/V1.2/Failas.cpp" "C:/Users/ugneo/c++ failai/V1.2/V1.2/Patikrinimas.cpp" "C:/Users/ugneo/c++ failai/V1.2/V1.2/Source.cpp" "C:/Users/ugneo/c++ failai/V1.2/V1.2/Studentas.cpp" "C:/Users/ugneo/c++ failai/V1.2/V1.2/Uzklausos.cpp") 