cmake_minimum_required(VERSION 3.20)

project("V3.0.02")

add_executable("${PROJECT_NAME}" "C:/Users/ugneo/c++ failai/V3.0.02/V3.0.02/Failas.cpp" "C:/Users/ugneo/c++ failai/V3.0.02/V3.0.02/Patikrinimas.cpp" "C:/Users/ugneo/c++ failai/V3.0.02/V3.0.02/Source.cpp" "C:/Users/ugneo/c++ failai/V3.0.02/V3.0.02/Studentas.cpp" "C:/Users/ugneo/c++ failai/V3.0.02/V3.0.02/Uzklausos.cpp")  